app/assets/stylesheets/common/base/topic-post.scss
/* ... */
.deleted {
  .regular > .cooked {
    background-color: var(--danger-low-mid);
  }
  .topic-meta-data:not(.embedded-reply) {
    color: var(--danger);

    .post-info a,
    a {
      color: currentColor;
    }

    .d-icon {
      color: currentColor;
    }
  }
  nav.post-controls {
    color: var(--danger);

    .show-replies,
    button.reply.create {
      color: var(--danger);
      .d-icon {
        color: var(--danger);
      }
    }
    .widget-button {
      &:hover {
        color: currentColor;
        background: var(--danger-low);
        .d-icon {
          color: currentColor;
        }
      }
      &[disabled]:hover {
        background-color: transparent;
        cursor: not-allowed;
      }
      &.fade-out {
        opacity: 1;
      }
    }
    .d-icon {
      color: var(--danger);
    }
  }
  .post-action {
    color: var(--danger);
  }
}

@keyframes heartBump {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.5);
  }
  100% {
    transform: scale(1);
  }
}

.has-like .d-icon.heart-animation {
  @media (prefers-reduced-motion: no-preference) {
    animation: heartBump 0.4s;
  }
}

@keyframes slideout {
  from {
    max-height: 60px;
  }

  to {
    max-height: 9999px;
  }
}

// we use aside to hold expandable quotes (versus, say, static blockquotes)
aside.quote {
  margin-top: 1em;
  margin-bottom: 1em;

  .title {
    @include post-aside;

    color: var(--primary-high-or-secondary-low);
    padding: 12px 12px 0px 12px;
    // blockquote is underneath this and has top margin
    .avatar {
      margin-right: 7px;
    }
    img {
      margin-top: -4px;
    }
    @include unselectable;
  }

  // blockquote is docked within aside for content
  blockquote {
    margin-top: 0;
    .expanded-quote {
      overflow: hidden;
      @media (prefers-reduced-motion: no-preference) {
        animation: slideout 1s ease-in-out;
      }
      &.icon-only {
        text-align: center;
        font-size: var(--font-up-4);
        padding-top: 0.5em;
        padding-bottom: 0.5em;
        color: var(--primary-medium);
      }
    }
  }
}

.quote-controls,
.quote-controls .d-icon {
  color: var(--primary-low-mid-or-secondary-high);
}

.quote-controls {
  .quote-toggle {
    padding: 0;
  }
}

.cooked .highlight {
  background-color: var(--tertiary-low);
  padding: 2px;
  margin: -2px;
}

.post-ignored {
  font-style: italic;
}

.post-action {
  color: var(--primary-medium);
  .undo-action,
  .act-action {
    margin-left: 5px;
  }
}

.small-user-list .unknown {
  display: inline-block;
  background-color: var(--primary-low);
  width: 25px;
  height: 25px;
  border-radius: 50%;
  vertical-align: middle;
  margin-right: 0.25em;
}

.post-hidden {
  .topic-avatar,
  .cooked,
  .topic-meta-data,
  .post-actions {
    opacity: 0.5;
  }
}

.topic-post.staged {
  opacity: 0.4;
}

.quote-controls {
  float: right;
  display: flex;
  align-items: center;
  a {
    margin-left: 0.3em;
  }
}

.quote-button {
  flex-direction: column;

  &.visible {
    display: flex;
  }

  .buttons {
    display: flex;
  }

  .extra {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  .fast-edit-container {
    display: flex;
    padding: 0.5em;
    padding-top: 0;
    flex-direction: column;
    align-items: flex-start;

    #fast-edit-input {
      margin: 0;
      width: 300px;
      height: 90px;
    }

    .save-fast-edit {
      margin-top: 0.5em;
    }
  }

  .insert-quote + .quote-sharing {
    border-left: 1px solid rgba(255, 255, 255, 0.3);
  }

  .btn-flat {
    &:hover {
      .d-icon {
        color: var(--tertiary);
      }
    }
  }

  .quote-sharing {
    vertical-align: middle;
    display: inline-flex;
    align-items: center;

    .btn {
      display: inline-flex;
      align-items: center;
    }

    .quote-share-label {
      opacity: 1;
      transition: opacity 0.3s ease-in-out;
    }

    &:hover {
      .quote-share-label {
        background: transparent;
        opacity: 0;
        max-width: 0;
        padding: 0;
        overflow: hidden;
      }
      .quote-share-label + .quote-share-buttons {
        max-width: 10em;
        opacity: 1;
        transition: opacity 0.3s ease-in-out;
      }
      // this pseudo element creates a transition buffer zone
      // without it, the width change on hover can cause transition jitter
      // the width is roughly wide enough to cover long translations of "share"
      &:after {
        content: "";
        position: absolute;
        display: block;
        background: transparent;
        height: 100%;
        padding: 0.5em 4em;
        z-index: -1; // below the buttons
      }
    }

    .quote-share-label + .quote-share-buttons {
      opacity: 0;
      overflow: hidden;
      max-width: 0;
      display: inline-flex;
      transition: opacity 0.3s ease-in-out;
    }
  }
}

.post-avatar,
.topic-avatar,
.user-card-avatar {
  position: relative;
}
/* ... */

